webook/webook-record-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-record-redis
spec:
  selector:
    app: webook-record-redis
  ports:
    - protocol: TCP
      # 内部访问端口
      port: 6380
      # 外部访问端口
      nodePort: 31379
      # Pod暴露端口
      targetPort: 6379
  type: NodePort
